# OpenClaw

./: .gitignore  DOWNLOAD.md  README.md  download.css  download.html  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: chat.rs  config.rs  memory.rs  mod.rs  monitoring.rs  permissions.rs  profiles.rs  providers.rs  runtime.rs  telegram.rs  updates.rs
src-tauri/src/crypto/: keystore.rs  vault.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs
src-tauri/src/db/migrations/: V001__initial.sql  mod.rs
src-tauri/src/platform/: macos.rs  windows.rs
src-tauri/src/runtime/: health.rs  installer.rs  mod.rs  process.rs  transport.rs
src-tauri/src/services/: config.rs  memory.rs  mod.rs  monitoring.rs  plugin.rs  profile.rs  provider.rs  runtime.rs  security.rs  telegram.rs  update.rs
src/components/layout/: Header.tsx  Sidebar.tsx
src/hooks/: useTauriCommand.ts
src/pages/: ChatPage.tsx  DashboardPage.tsx  MemoryPage.tsx  MonitoringPage.tsx  PermissionsPage.tsx  PluginsPage.tsx  ProfilesPage.tsx  ProvidersPage.tsx  SettingsPage.tsx  TelegramPage.tsx
src/stores/: appStore.ts  chatStore.ts
src/styles/: globals.css
src/types/: config.ts  events.ts  plugin.ts  runtime.ts
