[package]
name = "openclaw"
version = "0.1.1"
description = "The open platform for personal AI agents"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "openclaw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
sysinfo = "0.33"
teloxide = { version = "0.13", features = ["macros"] }
sha2 = "0.10"
hex = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
